# voting-data

./: .env.example  .gitignore  README.md  TODO.md  contributing.md  convert-documents-to-text.sh  convert-single.sh  download-actors.sh  download-reports.sh  group-by-size.sh  lint-check.py  lint-fix.sh  main.py  nltk-download.py  pylintrc  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run-all.sh  setup.py  summaries-v1.tgz  summarize.md  test.sh
.github/workflows/: build.yml  process-reports.yml
.gitlab/workflows/: build.yml
data/input/: 0readme.md  ip001x.html  ip002x.html  ip003x.html  ip004x.html  ip005x.html  ip006x.html  ip007x.html  ip008x.html  ip009x.html  ip010x.html  ip011x.html  ip012x.html  ip013x.html  ip014x.html  ip015x.html  ip016x.html  ip017x.html  ip018x.html  ip019x.html  ip020x.html  ip021x.html  ip022x.html  ip023x.html  ip024x.html  ip025x.html  ip026x.html  ip027x.html  ip028x.html  ip029x.html  ip030x.html  ip031x.html  ip032x.html  ip033x.html  ip034x.html  ip035x.html  ip036x.html  ip037x.html  ip038x.html  ip039x.html  (+262 more)
data/input/plenary/: readme.md
data/output/: plenary 288.md  plenary 292.md  plenary 295.md  plenary 298.md
data/output/documents/: summaries.json
data/output/json/: plenary 10.json  plenary 100.json  plenary 101.json  plenary 102.json  plenary 104.json  plenary 105.json  plenary 106.json  plenary 107.json  plenary 108.json  plenary 109.json  plenary 11.json  plenary 111.json  plenary 113.json  plenary 114.json  plenary 116.json  plenary 117.json  plenary 118.json  plenary 12.json  plenary 122.json  plenary 123.json  plenary 125.json  plenary 126.json  plenary 127.json  plenary 128.json  plenary 13.json  plenary 130.json  plenary 134.json  plenary 135.json  plenary 137.json  plenary 139.json  plenary 14.json  plenary 140.json  plenary 141.json  plenary 143.json  plenary 144.json  plenary 146.json  plenary 148.json  plenary 15.json  plenary 154.json  plenary 156.json  (+190 more)
data/output/markdown/: plenary 1.md  plenary 10.md  plenary 100.md  plenary 102.md  (+242 more)
environments/: dev.yaml  local.yaml  prod.yaml  test.yaml
infra/lambda/: README.md
lambda/: README.md  main.tf  outputs.tf  variables.tf
lambda/dev/: .terraform.lock.hcl
lambda/prod/: .terraform.lock.hcl
lambda/src/: search_motions.py  wddp.py
notebooks/: document-texts.ipynb  votes_exploration.ipynb
scripts/: ec2-setup.sh
src/: actor.py  enrichment.py  keepass_reader.py  main.py  model.py  test_voting_extractors.py  test_voting_serializers.py  voting_extractors.py  voting_serializers.py
src/fixtures/: plenary_298.md
terraform/summarizer/: main.tf  networking.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_motion_summarizer.py
tests/plenaries/: test_motion_extraction.py  test_motion_proposal_linker.py  test_plenary_extraction.py  test_report_item_extraction.py  test_vote_extraction.py
transparentdemocracy/: __init__.py  application.py  cli.py  config.py  enrichment.py  json_serde.py  kamer56_leden.csv  keepass_reader.py  main.py  model.py  test_model.py  test_motion_summarizer.py  test_politicians.py  test_voting_extractors.py  test_voting_serializers.py  voting_extractors.py  voting_serializers.py
transparentdemocracy/actors/: actors.py
transparentdemocracy/documents/: analyze_references.py  convert_to_text.py  document_repository.py  download.py  example_structured.py  references.py  summarize.py  test_document_repository.py  test_references.py  test_summarize.py
transparentdemocracy/infra/: dekamer.py  plenary_json.py
transparentdemocracy/motions/: motion_summarizer.py
transparentdemocracy/plenaries/: analysis.py  extraction.py  json_serde.py  motion_document_proposal_linker.py  motion_proposal_linker.py  serialization.py  test_extraction.py  test_extractors.py  test_motion_proposal_linker.py
transparentdemocracy/politicians/: enrich_votes.py  extraction.py  fetch_politicians.py  serialization.py
transparentdemocracy/publisher/: __init__.py  elastic_search.py  publisher.py  test_elastic_search.py  test_publisher.py
transparentdemocracy/usecases/: determine_plenaries_to_process.py  update_politicians.py
transparentdemocracy/utils/: base64_encode_secrets_json.py
wddp-local-infra/: docker-compose.yml
wddp-local-infra/elastic-start-local/: .env  docker-compose.yml  start.sh
(+867 files in other folders)
