[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transparentdemocracy"
version = "0.0.1"
description = "Transparent Democracy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TODO", email = "TODO@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.12.3",
    "elasticsearch>=7.10.1,<8.0.0",
    "google-api-core>=2.24.1",
    "google-api-python-client>=2.161.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-ollama>=0.2.3",
    "langchain-text-splitters>=0.3.6",
    "levenshtein>=0.25.1",
    "jsonpath-extractor>=0.9.2",
    "nltk>=3.9.1",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.1",
    "pykeepass>=4.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.66.6",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.3.4",
    "pytest>=7.0.0",
    "pylint>=2.15.0",
]

[project.scripts]
td = "transparentdemocracy.cli:main"

[project.urls]
Homepage = "https://github.com/transparentdemocracy/voting-data"
Repository = "https://github.com/transparentdemocracy/voting-data"
Issues = "https://github.com/transparentdemocracy/voting-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["transparentdemocracy"]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.3.4",
    "pytest>=7.0.0",
    "pylint>=2.15.0",
]
